--- a/dev/stylesheets/variables.scss
+++ b/dev/stylesheets/variables.scss
@@ -1,5 +1,6 @@
 // Page variables
 $page-width-max: 1100px;
+$on-phone-big: 400px;
 $on-tablet: 700px;
 $on-desktop: 1000px;
 
